# multi-camera-motion

./: CMakeLists.txt  LICENSE  Readme.md
include/multi-camera-motion/: approx_relpose_axial.h  approx_relpose_axial_fast.h  approx_relpose_generalized.h  approx_relpose_generalized_fast.h  relpose_generalized_affine.h  translation.h
src/: approx_relpose_axial.cpp  approx_relpose_axial_fast.cpp  approx_relpose_axial_fast_computeA.cpp  approx_relpose_axial_fast_computeA.h  approx_relpose_generalized.cpp  approx_relpose_generalized_fast.cpp  approx_relpose_generalized_fast_computeA.cpp  approx_relpose_generalized_fast_computeA.h  relpose_generalized_affine.cpp  translation.cpp
test/: .CMakeLists.txt.swp  CMakeLists.txt  affine_problem.cpp  affine_problem.h  problem.cpp  problem.h  random.h  ray.h  so3.cpp  so3.h  test_affine.cpp  test_approx.cpp
